frontend/tests/cases/positive/box.gr
const : forall (a : Type, b : Type) . a -> Box b -> a
const x [y] = x
