frontend/tests/cases/negative/hsup/pushZeroMany.gr
pushZeroMany : forall {a b : Type} . (a, b) [Zero] -> (a [Many], b [Zero])
pushZeroMany [(x, y)] = ([x], [y]) 